--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,4 @@
 PORT=8747
 JWT_KEY="(*^*(&(*)^(&*^*&^@()&@!LNASLBKJASBN!123123123@#@@#)))"
-ORIGIN="http://localhost:5173"
+ORIGIN="https://snappy-frontend-44w6.onrender.com"
 DATABASE_URL="mongodb://localhost:27017/snappy"
