--- a/server/.env
+++ b/server/.env
@@ -1,4 +1,4 @@
 PORT=8747
 JWT_KEY="(*^*(&(*)^(&*^*&^@()&@!LNASLBKJASBN!123123123@#@@#)))"
 ORIGIN="https://snappy-frontend-44w6.onrender.com"
-DATABASE_URL="mongodb+srv://deepanshijain1211:<aScGX5FxtCf82mz0>@snappy.a0pu1.mongodb.net/"
+DATABASE_URL="mongodb+srv://deepanshijain1211:aScGX5FxtCf82mz0@snappy.a0pu1.mongodb.net/"
